# FastGomoku

./: .gitignore  README.md
c/: CMakeLists.txt
c/include/: base.hpp  eval.hpp  gomoku.hpp  judge.hpp  mcts.hpp  play.hpp  py_api.hpp  py_util.hpp  search.hpp  selfplay.hpp  test.hpp  weval.hpp
c/src/: eval.cpp  gomoku.cpp  judge.cpp  main.cpp  mcts.cpp  play.cpp  py_api.cpp  py_util.cpp  search.cpp  selfplay.cpp  test.cpp  weval.cpp
python/: config.py  data.py  evaluate.py  evaluate2.py  evaluator.py  init.py  merge.py  model.py  model_forward.py  resnet.py  run.sh  selfplay.py  train.py  utilities.py
weights/: 122.pkl
